# nanoGPT

./: .pdm-python  model.py  pyproject.toml
